Fixed small image sizing bug that created a horizontal scroll bar.

--- a/css/index.css
+++ b/css/index.css
@@ -390,6 +390,10 @@ footer .footer-content .copyright {
 }
 .home .main-content .heading-content .heading-panel .panel-image {
   width: 48%;
+  align-self: center;
+}
+.home .main-content .heading-content .heading-panel .panel-image img {
+  width: 100%;
 }
 @media (max-width: 500px) {
   .home .main-content .heading-content .heading-panel .panel-image {
