--- a/less/home.less
+++ b/less/home.less
@@ -93,6 +93,10 @@
 
                 .panel-image {
                     width: 48%;
+                    align-self: center;
+                    img {
+                        width: 100%;
+                    }
                     @media @mobile {
                         width: 100%;
                         order: -1;
